--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,7 +26,7 @@ flutter:
   # adding or updating assets for this project.
   plugin:
     androidPackage: com.kaanbiryol.flaudio
-    pluginClass: FlaudioPlugin
+    pluginClass: FLAudioPlugin
 
   # To add assets to your plugin package, add an assets section, like this:
   # assets:
